--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awal Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1><span>Awal Hossain Hidden World</span></h1>
+    <section class="top-banner">
+       <div class="half header">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Awal Hossain </span>Hidden World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blank" href="facebook.com">Hire Me</a>
+        </div>
+        <div class="half">
+            <img src="images/Awal Portfolio.png" alt="Awal's picture">
+        </div>
+    </section>
+ 
 </body>
 </html>
