--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
             <img src="images/Awal Portfolio.png" alt="Awal's picture">
         </div>
     </section>
+    <section>
+        <div class="half header">
+            <img src="images/Awalbf2.png" alt="">
+        </div>
+        <div class="half header">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">Download CV</a>
+        </div>
+    </section>
+    <section>
+        <h1>Experiences</h1>
+        <div>
+            <h1>Full Stack Developer</h1>
+            <h5>2024-Present | Pro level Developer</h5>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        
+    </section>
  
 </body>
 </html>
